--- a/text/s1-c04-git-directory.textile
+++ b/text/s1-c04-git-directory.textile
@@ -4,7 +4,11 @@ When you initialize a git repository, either by cloning an existing one or creat
 
 When you run 'git init' to initialize your repository, the git directory is by default installed in your current working directory as '.git'.  This can be overridden with the _GIT_DIR_ environment variable at any time.  In fact, the git directory does not need to be in your source tree at all.  It's perfectly acceptable to keep all your git directories in a central place (/opt/git/myproject.git) and just make sure to set the GIT_DIR variable when you switch projects you are working on (/home/username/projects/myproject).
 
-For more in depth information on the git directory layout, see the "git repository layout docs":http://www.kernel.org/pub/software/scm/git/docs/repository-layout.html
+The git directory for our little project looks something like this:
+
+code. simple-git-dir-tree.txt
+
+For more in depth information on the git directory layout, see the "git repository layout docs.":http://www.kernel.org/pub/software/scm/git/docs/repository-layout.html
 
 For now, let's go over some of the more important contents of this directory.
 
@@ -18,41 +22,38 @@ code. config-example.txt
        
 See [config section] for more information on available configuration options.
 
-h3. index
+h3. .git/index
 
 This is the default location of the 'index' file for your git project.  This location can be overridden with the _GIT_INDEX_ environment variable, which is sometimes useful for temporary tree operations.  See [the index] or [advanced index operations] sections for more information on the git index.
 
-h3. objects
+h3. .git/objects/
 
-This is the main directory that holds the data of your git objects and pack files - that is, all the contents of the files you have ever checked in.
+This is the main directory that holds the data of your git objects and pack files - that is, all the contents of the files you have ever checked in, plus your commit, tree and tag objects.
+
+The files are stored by their SHA1 values.  The first two characters make up the subdirectory and the last 38 is the filename.  For example, if the SHA for a blob we've checked in was
+
+code. a576fac355dd17e39fd2671b010e36299f713b4d
+
+the file we would find the Zlib compressed contents in is
+
+code. [GIT_DIR]/objects/a5/76fac355dd17e39fd2671b010e36299f713b4d
+
+h3. .git/refs/
+
+This directory normally has three subdirectories in it - _heads_, _remotes_ and _tags_.  Each of these directories will hold files that correspond to your local branches, remote branches and tags, respectively. 
+
+For example, if you create a 'development' branch, the file .git/refs/heads/development will be created and will contain the sha of the commit that is the latest commit of that branch.
+
+h3. .git/HEAD
+
+This file holds a reference to the branch you are currently on.  This basically tells git what to use as the parent of your next commit.  The contents of it will generally look like this:
+
+code. ref: refs/heads/master
 
 h3. .git/hooks
 
-
 This directory contains shell scripts that are invoked after the git commands they are named after.  For example, after you run a commit, git will try to execute the _post-commit_ script, if it has executable permissions.
-
-When most of the scripts are run should be pretty self-explanatory by the name of the script, but here they are anyway:
-
-|_file name_ |_description_ |
-|applypatch-msg  | invoked by git-am |
-|pre-applypatch  | invoked by git-am |
-|post-commit     | invoked by git-commit |
-|pre-commit      | invoked by git-commit |
-|commit-msg      | invoked by git-commit |
-|update          | invoked by git-receive-pack on the remote repository |
-|post-update     | invoked by git-receive-pack on the remote repository |
-|post-receive    | invoked by git-receive-pack on the remote repository |
 
 See [hooks section] or the 
 "online hooks documentation":http://www.kernel.org/pub/software/scm/git/docs/hooks.html
 for more information on what you can do with hooks.
-
-h3. refs
-
-h3. HEAD
-
-
-h3. logs
-
-Records of changes made to refs are stored in this directory.
-
