--- a/text/s1-c05-the-data-model.textile
+++ b/text/s1-c05-the-data-model.textile
@@ -53,3 +53,10 @@ For instance, if we wanted the first tree, we could look for the parent of the p
 !../artwork/s1/object-dag.png!
 
 So, to keep all the information and history on the three versions of this tree, git stores 16 immutable, signed, compressed objects.
+
+h3. Traversal
+
+So, what do all the arrows in these illustrations really mean?  How does Git actually retrieve these objects in practice?  Well, it gets the initial SHA of the starting commit object by looking in the _.git/refs_ directory for the branch, tag or remote you specify.  Then it traverses the objects by walking the trees one by one, checking out the blobs under the names listed.
+
+!../artwork/s1/traversing-git-objects.png!
+
